# ahk_rs

./: Cargo.toml
src/: lib.rs
src/keyboard/: mod.rs  send_input.rs
