[package]
name = "ahk_rs"
version = "0.1.0"
authors = ["Bo An"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"

[dependencies.windows]
version = "0.40.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",

#    My features
    "Win32_UI_Input_KeyboardAndMouse"
]
